@@ -21,6 +21,7 @@ Version 1.5 (not yet released)
 - removed the "Shaded translations list" option, it's now always enabled
 - misc minor UI improvements
 - fixed possible transaction memory database corruption (#337, #352)
+- added instructions on how to install additional spellchecker dictionaries
 
 
 Version 1.4.6
